sh/env/iptables
# Generated by iptables-save v1.4.21 on Thu Mar 30 16:54:13 2017
*filter
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [561:33680]
# 内网转发通信
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i docker0 -j ACCEPT
# 开放ping
-A INPUT -p icmp -j ACCEPT
# 开放DNS 53端口
-A INPUT -p tcp -m tcp --sport 53 -j ACCEPT
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
# 开放 SSH 端口
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 50022 -j ACCEPT
# 5280 5281 5290 5291 供PC-IM使用
-A INPUT -p tcp -m tcp --dport 5290 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5291 -j ACCEPT
# 5222 5223 供IM 服务端使用
-A INPUT -p tcp -m tcp --dport 5223 -j ACCEPT
#-A INPUT -p tcp -m tcp --dport 5222 -j ACCEPT
# 1883 供安卓推送使用
-A INPUT -p tcp -m tcp --dport 1883 -j ACCEPT
# 28443 mdm端口
-A INPUT -p tcp -m tcp --dport 28443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8000 -j ACCEPT
# 18443 管理控制台端口
-A INPUT -p tcp -m tcp --dport 18443 -j ACCEPT
# 80 443 APP 访问端口
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
#-A INPUT -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8089 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
# 除了以上匹配内容
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
# 配置OUTPUT链
-A OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -p udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp --dport 53 -j ACCEPT
-A OUTPUT -p tcp --dport 22 -j ACCEPT
-A OUTPUT -p tcp --dport 80 -j ACCEPT
-A OUTPUT -p tcp --dport 443 -j ACCEPT
-A OUTPUT -p tcp --dport 2195 -j ACCEPT
-A OUTPUT -p tcp --dport 2196 -j ACCEPT
-A OUTPUT -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Thu Mar 30 16:54:13 2017
